--- a/templates/datamanagement/import_availabilities.html
+++ b/templates/datamanagement/import_availabilities.html
@@ -1,57 +1,44 @@
-{% extends "base.html" %}
-{% block title %}ShiftManager - Import availabilities{% endblock %}
+<div id="instructions" class="card-content card-color">
+    <div class="card-title"><b class="header-color-text">Before you start</b> please structure your data in the following manner</div>
+    <br>
+    <table class="striped">
+        <thead class="header-color white-text">
+            <th>Username</th>
+            <th>Weekday</th>
+            <th>Start</th>
+            <th>End</th>
+            <th>Tendency</th>
+            <th>Note</th>
+        </thead>
+    </table>
+    <ul class="collection">
+        <li class="collection-item">Start, End and Note are optional. All other fields are required.</li>
+        <li class="collection-item">Weekday has to be written like "Monday", etc.</li>
+        <li class="collection-item">If Available is "Yes" it will be set to True, otherwise False</li>
+        <li class="collection-item">Start and end have to be in the format "HH:mm"</li>
+        <li class="collection-item"><ul>Tendency only contains a number:
+            <li>0 - No preference</li>
+            <li>1 - Early shift</li>
+            <li>2 - Midday shift</li>
+            <li>3 - Late shift</li>
+            <li>4 - Night shift</li>
+        </ul></li>
+    </ul>
+    <br>
 
-{% block content %}
-    {% if user.is_admin %}
-        <h3 class="light-blue-text text-darken-1">Import availabilities</h3>
-        <div class="card">
-            <div class="card-content">
-                <div class="card-title">Before you start</div>
-                <p>Please structure your data in the following manner:</p>
-                <table class="striped">
-                    <thead class="grey darken-1 white-text">
-                        <th>Username</th>
-                        <th>Weekday</th>
-                        <th>Start</th>
-                        <th>End</th>
-                        <th>Tendency</th>
-                        <th>Note</th>
-                    </thead>
-                </table>
-                <p>Start, End and Note are optional. All other fields are required.</p>
-                <p>Weekday has to be written like "Monday", etc.</p>
-                <p>If Available is "Yes" it will be set to True, otherwise False</p>
-                <p>Start and end have to be in the format "HH:mm"</p>
-                <ul>Tendency only contains a number:
-                    <li>0 - No preference</li>
-                    <li>1 - Early shift</li>
-                    <li>2 - Midday shift</li>
-                    <li>3 - Late shift</li>
-                    <li>4 - Night shift</li>
-                </ul>
+    <form method="POST" enctype='multipart/form-data'>
+        {% csrf_token %}
+        <div class="row" style="gap: 1em">
+            <div class="s4 file-field input-field">
+                <div class="btn accent-color">
+                    <span>File</span>
+                    <input type="file" name="file_upload" required id="file_upload">
+                </div>
+                <div class="s4file-path-wrapper">
+                    <input class="file-path validate" type="text" placeholder="Excel-File">
+                </div>
             </div>
-        </div>
-
-        <div class="card">
-            <div class="card-content">
-                <form method="POST" enctype='multipart/form-data'>
-                    {% csrf_token %}
-                    <div class="row">
-                        <div class="file-field input-field col s12 m6">
-                            <div class="btn light-blue darken-1">
-                                <span>File</span>
-                                <input type="file" name="file_upload" required id="file_upload">
-                            </div>
-                            <div class="file-path-wrapper">
-                                <input class="file-path validate" type="text" placeholder="Excel-File">
-                            </div>
-                        </div>
-                    </div>
-                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">cloud_upload</i>Upload</button>
-                </form>
-            </div>
-        </div>
-    {% else %}
-        {% include 'forbidden.html' %}
-    {% endif %}
-{% endblock %}
+        </div><br>
+        <button type="submit" class="waves-effect waves-light btn accent-color"><i class="material-icons left">cloud_upload</i>Upload</button>
+    </form>
+</div>
