--- a/templates/datamanagement/import_holidays.html
+++ b/templates/datamanagement/import_holidays.html
@@ -1,53 +1,40 @@
-{% extends "base.html" %}
-{% block title %}ShiftManager - Import holidays{% endblock %}
+<div id="instructions" class="card-content card-color">
+    <div class="card-title"><b class="header-color-text">Before you start</b> please structure your data in the following manner</div>
+    <br>
+    <table class="striped">
+        <thead class="header-color white-text">
+            <th>Username</th>
+            <th>Start Date</th>
+            <th>End Date</th>
+            <th>Status</th>
+            <th>Note</th>
+        </thead>
+    </table>
+    <ul class="collection">
+        <li class="collection-item">Note is optional. All other fields are required.</li>
+        <li class="collection-item">Dates have to be in the ISO format "YYYY-MM-DD"</li>
+        <li class="collection-item"><ul>Status only contains a number:
+            <li>0 - sent</li>
+            <li>1 - not decided</li>
+            <li>2 - declined</li>
+            <li>3 - approved</li>
+        </ul></li>
+    </ul>
+    <br>
 
-{% block content %}
-    {% if user.is_admin %}
-        <h3 class="light-blue-text text-darken-1">Import holidays</h3>
-        <div class="card">
-            <div class="card-content">
-                <div class="card-title">Before you start</div>
-                <p>Please structure your data in the following manner:</p>
-                <table class="striped">
-                    <thead class="grey darken-1 white-text">
-                        <th>Username</th>
-                        <th>Start Date</th>
-                        <th>End Date</th>
-                        <th>Status</th>
-                        <th>Note</th>
-                    </thead>
-                </table>
-                <p>Note is optional. All other fields are required.</p>
-                <p>Dates have to be in the ISO format "YYYY-MM-DD"</p>
-                <ul>Status only contains a number:
-                    <li>0 - sent</li>
-                    <li>1 - not decided</li>
-                    <li>2 - declined</li>
-                    <li>3 - approved</li>
-                </ul>
+    <form method="POST" enctype='multipart/form-data'>
+        {% csrf_token %}
+        <div class="row" style="gap: 1em">
+            <div class="s4 file-field input-field">
+                <div class="btn accent-color">
+                    <span>File</span>
+                    <input type="file" name="file_upload" required id="file_upload">
+                </div>
+                <div class="s4file-path-wrapper">
+                    <input class="file-path validate" type="text" placeholder="Excel-File">
+                </div>
             </div>
-        </div>
-
-        <div class="card">
-            <div class="card-content">
-                <form method="POST" enctype='multipart/form-data'>
-                    {% csrf_token %}
-                    <div class="row">
-                        <div class="file-field input-field col s12 m6">
-                            <div class="btn light-blue darken-1">
-                                <span>File</span>
-                                <input type="file" name="file_upload" required id="file_upload">
-                            </div>
-                            <div class="file-path-wrapper">
-                                <input class="file-path validate" type="text" placeholder="Excel-File">
-                            </div>
-                        </div>
-                    </div>
-                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">cloud_upload</i>Upload</button>
-                </form>
-            </div>
-        </div>
-    {% else %}
-        {% include 'forbidden.html' %}
-    {% endif %}
-{% endblock %}
+        </div><br>
+        <button type="submit" class="waves-effect waves-light btn accent-color"><i class="material-icons left">cloud_upload</i>Upload</button>
+    </form>
+</div>
