--- a/templates/datamanagement/import_shifts.html
+++ b/templates/datamanagement/import_shifts.html
@@ -1,54 +1,41 @@
-{% extends "base.html" %}
-{% block title %}ShiftManager - Import shifts{% endblock %}
+<div id="instructions" class="card-content card-color">
+    <div class="card-title"><b class="header-color-text">Before you start</b> please structure your data in the following manner</div>
+    <br>
+    <table class="striped">
+        <thead class="header-color white-text">
+            <th>Date</th>
+            <th>Start</th>
+            <th>End</th>
+            <th>Break</th>
+            <th>Department</th>
+            <th>Username</th>
+            <th>Highlight</th>
+            <th>Note</th>
+        </thead>
+    </table>
+    <ul class="collection">
+        <li class="collection-item">Note and Username and Highlight are optional. All other fields are required.</li>
+        <li class="collection-item">Date has to be formatted "YYYY-MM-DD"</li>
+        <li class="collection-item">Start, End and Break have to be formatted "HH:mm"</li>
+        <li class="collection-item">Department and Username have to be exact to the entries in the database!</li>
+        <li class="collection-item">"Yes" in Highlight column will set the Highlight value to True, otherwise False</li>
+        <li class="collection-item">Qualifications are currently not importable with shifts</li>
+    </ul>
+    <br>
 
-{% block content %}
-    {% if user.is_admin %}
-        <h3 class="light-blue-text text-darken-1">Import shifts</h3>
-        <div class="card">
-            <div class="card-content">
-                <div class="card-title">Before you start</div>
-                <p>Please structure your data in the following manner:</p>
-                <table class="striped">
-                    <thead class="grey darken-1 white-text">
-                        <th>Date</th>
-                        <th>Start</th>
-                        <th>End</th>
-                        <th>Break</th>
-                        <th>Department</th>
-                        <th>Username</th>
-                        <th>Highlight</th>
-                        <th>Note</th>
-                    </thead>
-                </table>
-                <p>Note and Username and Highlight are optional. All other fields are required.</p>
-                <p>Date has to be formatted "YYYY-MM-DD"</p>
-                <p>Start, End and Break have to be formatted "HH:mm"</p>
-                <p>Department and Username have to be exact to the entries in the database!</p>
-                <p>"Yes" in Highlight column will set the Highlight value to True, otherwise False</p>
-                <p>Qualifications are currently not importable with shifts</p>
+    <form method="POST" enctype='multipart/form-data'>
+        {% csrf_token %}
+        <div class="row" style="gap: 1em">
+            <div class="s4 file-field input-field">
+                <div class="btn accent-color">
+                    <span>File</span>
+                    <input type="file" name="file_upload" required id="file_upload">
+                </div>
+                <div class="s4file-path-wrapper">
+                    <input class="file-path validate" type="text" placeholder="Excel-File">
+                </div>
             </div>
-        </div>
-
-        <div class="card">
-            <div class="card-content">
-                <form method="POST" enctype='multipart/form-data'>
-                    {% csrf_token %}
-                    <div class="row">
-                        <div class="file-field input-field col s12 m6">
-                            <div class="btn light-blue darken-1">
-                                <span>File</span>
-                                <input type="file" name="file_upload" required id="file_upload">
-                            </div>
-                            <div class="file-path-wrapper">
-                                <input class="file-path validate" type="text" placeholder="Excel-File">
-                            </div>
-                        </div>
-                    </div>
-                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">cloud_upload</i>Upload</button>
-                </form>
-            </div>
-        </div>
-    {% else %}
-        {% include 'forbidden.html' %}
-    {% endif %}
-{% endblock %}
+        </div><br>
+        <button type="submit" class="waves-effect waves-light btn accent-color"><i class="material-icons left">cloud_upload</i>Upload</button>
+    </form>
+</div>
