--- a/templates/datamanagement/import_users.html
+++ b/templates/datamanagement/import_users.html
@@ -1,73 +1,63 @@
-{% extends "base.html" %}
-{% block title %}ShiftManager - Import departments{% endblock %}
+<div id="instructions" class="card-content card-color">
+    <div class="card-title"><b class="header-color-text">Before you start</b> please structure your data in the following manner</div>
+    <br>
+    <div class="card-title"><b class="header-color-text">Worksheet Users</b></div>
+    <table class="striped">
+        <thead class="header-color white-text">
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>E-Mail</th>
+        <th>Username</th>
+        <th>Staff ID</th>
+        <th>External</th>
+        <th>Department</th>
+        <th>Address</th>
+        <th>Zip</th>
+        <th>City</th>
+        <th>Telephone home</th>
+        <th>Telephone mobile</th>
+        <th>Start contract</th>
+        <th>End contract</th>
+        <th>Verified</th>
+        <th>Role</th>
+        <th>Active</th>
+        <th>Work hours</th>
+        <th>Holiday</th>
+        </thead>
+    </table>
+    <ul class="collection">
+        <li class="collection-item accent-color">Datasets where username already exists will be updated</li>
+        <li class="collection-item">External, Verified and Active will be set to True if entry is "Yes", otherwise False</li>
+        <li class="collection-item">Address, Zip, City, Telephone, End contract, work hours and holiday are optional parameters</li>
+        <li class="collection-item">Roles available: Admin, Planner and Employee. If no Role is specified, entry will be set to Employee by default</li>
+        <li class="collection-item">Default password will be set to "H4cKm3!fY0uC4n". Users can obtain a password reset by requesting it entering their E-Mail</li>
+    </ul>
+    <br>
+    <div class="card-title"><b class="header-color-text">Worksheet Qualifications</b></div>
+    <table class="striped">
+        <thead class="header-color white-text">
+        <th>Username</th>
+        <th>Qualification</th>
+        </thead>
+    </table>
+    <ul class="collection">
+        <li class="collection-item">Username is Users Username column, Qualification is Qualification Name column</li>
+    </ul>
+    <br>
 
-{% block content %}
-    {% if user.is_admin %}
-        <h3 class="light-blue-text text-darken-1">Import departments</h3>
-        <div class="card">
-            <div class="card-content">
-                <div class="card-title">Before you start</div>
-                <p>Please structure your data in the following manner:</p>
-                <p><b>Worksheet "Users"</b></p>
-                <table class="striped">
-                    <thead class="grey darken-1 white-text">
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>E-Mail</th>
-                        <th>Username</th>
-                        <th>Staff ID</th>
-                        <th>External</th>
-                        <th>Department</th>
-                        <th>Address</th>
-                        <th>Zip</th>
-                        <th>City</th>
-                        <th>Telephone home</th>
-                        <th>Telephone mobile</th>
-                        <th>Start contract</th>
-                        <th>End contract</th>
-                        <th>Verified</th>
-                        <th>Role</th>
-                        <th>Active</th>
-                        <th>Work hours</th>
-                        <th>Holiday</th>
-                    </thead>
-                </table>
-                <p>Datasets where username already exists will be updated</p>
-                <p>External, Verified and Active will be set to True if entry is "Yes", otherwise False</p>
-                <p>Address, Zip, City, Telephone, End contract, work hours and holiday are optional parameters</p>
-                <p>Roles available: Admin, Planner and Employee. If no Role is specified, entry will be set to Employee by default</p>
-                <p>Default password will be set to "H4cKm3!fY0uC4n". Users can obtain a password reset by requesting it entering their E-Mail</p>
-                <br><p><b>Worksheet "Qualifications"</b></p>
-                <table class="striped">
-                    <thead class="grey darken-1 white-text">
-                        <th>Username</th>
-                        <th>Qualification</th>
-                    </thead>
-                </table>
-                <p>Username is Users Username column, Qualification is Qualification Name column</p>
+    <form method="POST" enctype='multipart/form-data'>
+        {% csrf_token %}
+        <div class="row" style="gap: 1em">
+            <div class="s4 file-field input-field">
+                <div class="btn accent-color">
+                    <span>File</span>
+                    <input type="file" name="file_upload" required id="file_upload">
+                </div>
+                <div class="s4file-path-wrapper">
+                    <input class="file-path validate" type="text" placeholder="Excel-File">
+                </div>
             </div>
-        </div>
-
-        <div class="card">
-            <div class="card-content">
-                <form method="POST" enctype='multipart/form-data'>
-                    {% csrf_token %}
-                    <div class="row">
-                        <div class="file-field input-field col s12 m6">
-                            <div class="btn light-blue darken-1">
-                                <span>File</span>
-                                <input type="file" name="file_upload" required id="file_upload">
-                            </div>
-                            <div class="file-path-wrapper">
-                                <input class="file-path validate" type="text" placeholder="Excel-File">
-                            </div>
-                        </div>
-                    </div>
-                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">cloud_upload</i>Upload</button>
-                </form>
-            </div>
-        </div>
-    {% else %}
-        {% include 'forbidden.html' %}
-    {% endif %}
-{% endblock %}
+        </div><br>
+        <button type="submit" class="waves-effect waves-light btn accent-color"><i class="material-icons left">cloud_upload</i>Upload</button>
+    </form>
+</div>
