--- a/templates/dayTemplates/day_template_list.html
+++ b/templates/dayTemplates/day_template_list.html
@@ -3,38 +3,38 @@
 
 {% block content %}
     {% if user.is_authorized %}
-        <h3 class="light-blue-text text-darken-1">Day templates</h3>
-        {% if user.is_admin %}<a class="waves-effect waves-light btn light-blue darken-1 right" href="{% url 'create_day_template' %}"><i class="material-icons left">add</i>Create day template</a><br><br>{% endif %}
-        <div class="card">
-            <div class="card-content">
-                <table class="striped highlight responsive-table">
-                    <thead class="grey darken-1 white-text">
-                        <tr>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Assigned shifts</th>
-                            <th>View</th>
-                            <th>Edit</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for entry in all_entries %}
-                        <tr>
-                            <td>{{ entry.name }}</td>
-                            <td>{{ entry.description }}</td>
-                            <td>{{ entry.get_shifts.count }}</td>
-                            <td>
-                                <a class="waves-effect waves-light btn amber darken-1" href="{% url 'view_day_template' entry.id %}"><i class="material-icons">search</i></a>
-                            </td>
-                            <td>
-                                <a class="waves-effect waves-light btn amber darken-1" href="{% url 'edit_day_template' entry.id %}"><i class="material-icons">edit</i></a>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+        <div id="add-modal" class="modal">
+            <div id="add-modal-content"></div>
         </div>
+        <div id="edit-modal" class="modal">
+            <div id="edit-modal-content"></div>
+        </div>
+        <div id="view-modal" class="modal">
+            <div id="view-modal-content"></div>
+        </div>
+        <br><br><br>
+        <div id="holiday-content">
+            <form hx-post="{% url 'day_templates' %}" hx-target="#day-template-table" hx-swap="morph">
+                {% csrf_token %}
+                <div class="card card-color">
+                    <div class="card-content header-color">
+                        <div class="row" style="gap: 1em">
+                            <div class="s8 card-title white-text"><b class="accent-color-text"><i class="material-icons left">event</i>Day templates</b></div>
+                            <div class="s4 input-field">
+                                <i class="material-icons prefix">search</i>
+                                <input id="id_keyword" type="search" name="keyword" placeholder=" " hx-post="{% url 'day_templates' %}" hx-trigger="keyup delay:250ms" hx-target="#day-template-table" hx-swap="morph">
+                                <label for="id_keyword">Keyword</label>
+                            </div>
+                        </div>
+                        <div id="loader" hx-post="{% url 'day_templates' %}" hx-trigger="load once" hx-target="#day-template-table" hx-swap="morph"></div>
+                        <br><a class="modal-trigger btn-floating accent-color white-text right" data-target="add-modal" hx-get="{% url 'create_day_template' %}" hx-target="#add-modal" hx-swap="morph"><i class="material-icons left">add</i></a>
+                    </div>
+
+                    <div id="day-template-table" class="card-content card-color"></div>
+                </div>
+            </form>
+        </div>
+        <br><br><br>
     {% else %}
         {% include 'forbidden.html' %}
     {% endif %}
